crates/assembly/src/snapshots/miden_assembly__tests__adv_has_map_key.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 3026
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(adv.has_mapkey, 3)
        push(5642583036089175977)
        asmOp(adv.has_mapkey, 3)
        emit
        asmOp(adv.has_mapkey, 3)
        drop
        asmOp(assert, 1)
        assert(0)
    end
end
