crates/assembly/src/snapshots/miden_assembly__tests__advmap_push.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2)
        push(2)
        push(2)
        push(2)
        push(17843484659000820118)
        emit
        drop
        assert(0)
        noop
        noop
    end
end
