crates/assembly/src/snapshots/miden_assembly__tests__u32assertw_with_code.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 2001
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(u32assertw, 6)
        u32assert2(0)
        asmOp(u32assertw, 6)
        movup3
        asmOp(u32assertw, 6)
        movup3
        asmOp(u32assertw, 6)
        u32assert2(0)
        asmOp(u32assertw, 6)
        movup3
        asmOp(u32assertw, 6)
        movup3
        asmOp(u32assertw.err="Oh no", 6)
        u32assert2(15491226248792286710)
        asmOp(u32assertw.err="Oh no", 6)
        movup3
        asmOp(u32assertw.err="Oh no", 6)
        movup3
        asmOp(u32assertw.err="Oh no", 6)
        u32assert2(15491226248792286710)
        asmOp(u32assertw.err="Oh no", 6)
        movup3
        asmOp(u32assertw.err="Oh no", 6)
        movup3
        asmOp(u32assertw.err="Oh no", 6)
        u32assert2(15491226248792286710)
        asmOp(u32assertw.err="Oh no", 6)
        movup3
        asmOp(u32assertw.err="Oh no", 6)
        movup3
        asmOp(u32assertw.err="Oh no", 6)
        u32assert2(15491226248792286710)
        asmOp(u32assertw.err="Oh no", 6)
        movup3
        asmOp(u32assertw.err="Oh no", 6)
        movup3
        noop
        noop
        noop
    end
end
